@@ -17,6 +17,8 @@ documents those changes that are of interest to users and administrators.
     that had a partition in them.
  -- Don't return the extern step from sstat by default.
  -- In sstat print 'extern' instead of 4294967295 for the extern step.
+ -- Lock slurmstepd in memory to avoid possible SIGBUS if the daemon is paged
+    out at the time of a Slurm upgrade (changing plugins).
 
 * Changes in Slurm 16.05.3
 ==========================
